# Environ

./: .gitignore  .readthedocs.yaml  Dockerfile  Makefile  Modules_makefile_corrections.py  PW_makefile_corrections.py  README  README.md  change_deps.sh  clean.sh  configure  main_make_corrections.py  make.depend_corrections.py  notes.txt  revert_deps.sh  test_results  test_results_merging_gcs_assim  test_results_merging_xspectra  update_libs.sh
Doc/: INPUT_Environ.def  INPUT_Environ.html  INPUT_Environ.txt  INPUT_Environ.xml  Makefile  doxy-environ  doxygen-README.md  release-notes  style-guide.md  warning_codes.md
FFTXlib/: Makefile  README.md  base_scatter.f90  fft_buffers.f90  fft_error.f90  fft_fwinv.f90  fft_ggen.f90  fft_helper_subroutines.f90  fft_interfaces.f90  fft_interpolate.f90  fft_main.f90  fft_parallel.f90  fft_parallel_2d.f90  fft_param.f90  fft_scalar.ARM_LIB.f90  fft_scalar.DFTI.f90  fft_scalar.ESSL.f90  fft_scalar.FFTW.f90  fft_scalar.FFTW3.f90  fft_scalar.SX6.f90  fft_scalar.cuFFT.f90  fft_scalar.f90  fft_scatter.f90  fft_scatter_2d.f90  fft_scatter_2d_gpu.f90  fft_scatter_gpu.f90  fft_smallbox.f90  fft_smallbox_type.f90  fft_stick.c  fft_support.f90  fft_types.f90  fftw.c  fftw.h  fftw_interfaces.f90  make.depend  mkl_wrapper.f90  scatter_mod.f90  stick_base.f90  test0.f90  tg_gather.f90  (+2 more)
FFTs/: Makefile  README.md  base_scatter.f90  base_stick.f90  fft_buffers.f90  fft_ggen.f90  fft_interfaces.f90  fft_main.f90  fft_parallel.f90  fft_parallel_gpu.f90  fft_param.f90  fft_scalar.ARM_LIB.f90  fft_scalar.DFTI.f90  fft_scalar.ESSL.f90  fft_scalar.FFTW.f90  fft_scalar.FFTW3.f90  fft_scalar.SX6.f90  fft_scalar.cuFFT.f90  fft_scalar.f90  fft_scatter.f90  fft_scatter_gpu.f90  fft_stick.c  fft_support.f90  fftw_interfaces.f90  make.depend  scatter_mod.f90  types_fft.f90  (+1 more)
install/: aclocal.m4  configure  configure.ac  configure.msg.in  make.inc.in  makedeps.sh  refresh-configure.sh
install/m4/: x_ac_env_aix_dflags.m4  x_ac_env_ar.m4  x_ac_env_arch.m4  x_ac_env_blas.m4  x_ac_env_cc.m4  x_ac_env_cpp.m4  x_ac_env_cuda.m4  x_ac_env_default_env.m4  x_ac_env_elpa.m4  x_ac_env_f90.m4  x_ac_env_f90rule.m4  x_ac_env_fft.m4  x_ac_env_hdf5.m4  x_ac_env_lapack.m4  x_ac_env_ld.m4  x_ac_env_mass.m4  x_ac_env_mpi.m4  x_ac_env_mpif90.m4  x_ac_env_openmp.m4  x_ac_env_qe.m4  x_ac_env_ranlib.m4  x_ac_env_scalapack.m4  x_ac_env_signal.m4  x_ac_env_wget.m4
(+983 files in other folders)
